<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_default">

        <nl.tcilegnar.weer9292.ui.customview.WeatherDetail
            android:id="@+id/weather_detail_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detail_label="@string/details_label_date" />

        <nl.tcilegnar.weer9292.ui.customview.WeatherDetail
            android:id="@+id/weather_detail_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detail_label="@string/details_label_location" />

        <nl.tcilegnar.weer9292.ui.customview.WeatherDetail
            android:id="@+id/weather_detail_coordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detail_label="@string/details_label_coordinates" />

        <nl.tcilegnar.weer9292.ui.customview.WeatherDetail
            android:id="@+id/weather_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detail_label="@string/details_label_description" />

        <TextView
            style="@style/weather_detail_sub_header"
            android:text="@string/details_label_temperatures" />

        <nl.tcilegnar.weer9292.ui.customview.WeatherDetail
            android:id="@+id/weather_detail_temp_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detail_label="@string/details_label_temp_current" />

        <nl.tcilegnar.weer9292.ui.customview.WeatherDetail
            android:id="@+id/weather_detail_temp_feel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detail_label="@string/details_label_temp_feel" />

        <nl.tcilegnar.weer9292.ui.customview.WeatherDetail
            android:id="@+id/weather_detail_temp_max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detail_label="@string/details_label_temp_max" />

        <nl.tcilegnar.weer9292.ui.customview.WeatherDetail
            android:id="@+id/weather_detail_temp_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detail_label="@string/details_label_temp_min" />

        <TextView
            style="@style/weather_detail_sub_header"
            android:text="@string/details_label_wind" />

        <nl.tcilegnar.weer9292.ui.customview.WeatherDetail
            android:id="@+id/weather_detail_wind_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detail_label="@string/details_label_wind_speed" />

        <nl.tcilegnar.weer9292.ui.customview.WeatherDetail
            android:id="@+id/weather_detail_wind_angle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detail_label="@string/details_label_wind_angle" />

        <nl.tcilegnar.weer9292.ui.customview.WeatherDetail
            android:id="@+id/weather_detail_wind_gust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detail_label="@string/details_label_wind_gust" />

        <TextView
            style="@style/weather_detail_sub_header"
            android:text="@string/details_label_details" />

        <nl.tcilegnar.weer9292.ui.customview.WeatherDetail
            android:id="@+id/weather_detail_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detail_label="@string/details_label_pressure" />

        <nl.tcilegnar.weer9292.ui.customview.WeatherDetail
            android:id="@+id/weather_detail_humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detail_label="@string/details_label_humidity" />

        <nl.tcilegnar.weer9292.ui.customview.WeatherDetail
            android:id="@+id/weather_detail_sunrise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detail_label="@string/details_label_wind_sunrise" />

        <nl.tcilegnar.weer9292.ui.customview.WeatherDetail
            android:id="@+id/weather_detail_sunset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:detail_label="@string/details_label_wind_sunset" />
    </LinearLayout>
</ScrollView>
